# Test_Photo_Point

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
currency_app/: settings.py  urls.py
currency_app/current_usd/: apps.py  urls.py  views.py
currency_app/templates/: footer.html  index.html
