[tool.poetry]
name = "test-photo-point"
version = "0.1.0"
description = "Just a simple Django project"
authors = ["Mikhail Zherebtsov <bezrezen97@gmail.com>"]
readme = "README.md"
packages = [
  { include = "currency_converter" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
